--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,9 +20,11 @@ jobs:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          persist-credentials: false
       - uses: actions/checkout@v5
         with:
           path: TeX-Live
+          persist-credentials: false
           ref: svn70897
           repository: TeX-Live/texlive-source
           sparse-checkout: texk/lcdf-typetools/lcdf-typetools-src/glyphtounicode.tex
@@ -31,7 +33,7 @@ jobs:
         shell: bash
         run: |
           mv "$GITHUB_WORKSPACE/TeX-Live/texk/lcdf-typetools/lcdf-typetools-src/glyphtounicode.tex" "$GITHUB_WORKSPACE"
-      - uses: super-linter/super-linter/slim@v8.0.0
+      - uses: super-linter/super-linter/slim@ffde3b2b33b745cb612d787f669ef9442b1339a6
         env:
           VALIDATE_MARKDOWN_PRETTIER: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
