--- a/.github/linters/.ecrc
+++ b/.github/linters/.ecrc
@@ -1,19 +1,18 @@
 {
-    "AllowedContentTypes": [],
-    "Debug": false,
-    "Disable":
-    {
-        "EndOfLine": false,
-        "IndentSize": false,
-        "Indentation": false,
-        "InsertFinalNewline": false,
-        "MaxLineLength": true,
-        "TrimTrailingWhitespace": false
-    },
-    "Exclude": [],
-    "IgnoreDefaults": false,
-    "NoColor": false,
-    "PassedFiles": [],
-    "SpacesAftertabs": false,
-    "Verbose": false
+  "AllowedContentTypes": [],
+  "Debug": false,
+  "Disable": {
+    "EndOfLine": false,
+    "IndentSize": false,
+    "Indentation": false,
+    "InsertFinalNewline": false,
+    "MaxLineLength": true,
+    "TrimTrailingWhitespace": false
+  },
+  "Exclude": [],
+  "IgnoreDefaults": false,
+  "NoColor": false,
+  "PassedFiles": [],
+  "SpacesAfterTabs": false,
+  "Verbose": false
 }
