--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - run: sudo apt install ghostscript imagemagick
       - name: Remove ImageMagick policy that disallows PDF conversion.
         run: |
