--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
         with:
           persist-credentials: false
       - run: sudo apt install ghostscript imagemagick
